; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/bootmgr/extr_main.c_bootmgr_board_init.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/bootmgr/extr_main.c_bootmgr_board_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@g_pfnVectors = common dso_local global i32* null, align 8
@FAULT_SYSTICK = common dso_local global i32 0, align 4
@PRCM_SAFE_BOOT_BIT = common dso_local global i32 0, align 4
@PRCM_FIRST_BOOT_BIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @bootmgr_board_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bootmgr_board_init() #0 {
  %1 = load i32*, i32** @g_pfnVectors, align 8
  %2 = getelementptr inbounds i32, i32* %1, i64 0
  %3 = ptrtoint i32* %2 to i64
  %4 = call i32 @MAP_IntVTableBaseSet(i64 %3)
  %5 = call i32 (...) @MAP_IntMasterEnable()
  %6 = load i32, i32* @FAULT_SYSTICK, align 4
  %7 = call i32 @MAP_IntEnable(i32 %6)
  %8 = call i32 (...) @PRCMCC3200MCUInit()
  %9 = load i32, i32* @PRCM_SAFE_BOOT_BIT, align 4
  %10 = call i32 @PRCMClearSpecialBit(i32 %9)
  %11 = load i32, i32* @PRCM_FIRST_BOOT_BIT, align 4
  %12 = call i32 @PRCMClearSpecialBit(i32 %11)
  %13 = call i32 (...) @mperror_bootloader_check_reset_cause()
  %14 = call i32 (...) @CRYPTOHASH_Init()
  %15 = call i32 (...) @mperror_init0()
  ret void
}

declare dso_local i32 @MAP_IntVTableBaseSet(i64) #1

declare dso_local i32 @MAP_IntMasterEnable(...) #1

declare dso_local i32 @MAP_IntEnable(i32) #1

declare dso_local i32 @PRCMCC3200MCUInit(...) #1

declare dso_local i32 @PRCMClearSpecialBit(i32) #1

declare dso_local i32 @mperror_bootloader_check_reset_cause(...) #1

declare dso_local i32 @CRYPTOHASH_Init(...) #1

declare dso_local i32 @mperror_init0(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
